# inithub

./: .dockerignore  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
agent/: Makefile  README.md  pyproject.toml  roteiro.md
agent/docker/: agent.dockerfile
agent/prompts/: classify_user_request.md  comportamentals.md  extract_initiative.md  find_initiative.md  guide.md  register_initiative.md
agent/src/: chain.py  llms.py  main.py  nodes.py  schemas.py  terminal.py
agent/src/config/: env.py  logger.py
agent/src/schemas/: agent.py
agent/src/services/: backend.py
agent/src/workflow/: chain.py  decorators.py  nodes.py
agent/ui/: index.html  styles.css
backend/: .env.example  .gitignore  Makefile  README.md  TEMP_test_api.js  docker-compose.yml  package-lock.json  package.json  pyproject.toml  send_initiatives.js  setup.cfg  tsconfig.json
backend/docker/: backend.dockerfile
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20250807000000_init/: migration.sql
backend/prisma/migrations/20250808143354_init/: migration.sql
backend/prisma/migrations/20250808143618_npx_prisma_migrate_dev_create_only_name_add_embedding_vector/: migration.sql
backend/prisma/migrations/20250808143646_npx_prisma_generate/: migration.sql
backend/prisma/migrations/20250808150933_remove_created_updated_by/: migration.sql
backend/src/: app.module.ts  db.py  main.py  main.ts
backend/src/auth/: admin.guard.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
backend/src/auth/dto/: auth-response.dto.ts  (+2 more)
backend/src/config/: env.py
backend/src/embeddings/: embeddings.controller.ts  embeddings.module.ts  embeddings.service.ts
backend/src/initiatives/: initiatives.controller.spec.ts  initiatives.controller.ts  initiatives.module.ts  initiatives.service.spec.ts  initiatives.service.ts  models.py  repository.py  routes.py
backend/src/users/: users.controller.spec.ts  users.controller.ts  users.service.spec.ts  users.service.ts
(+96 files in other folders)
