[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "init-agent"
version = "0.0.1"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "starlette==0.47.2",

    # Websocket support
    "websockets==15.0.1",
    "watchfiles==1.1.0",

    # HTTP requests & networking
    "httpx==0.28.1",
    "requests==2.32.4",

    # LangChain + LangGraph stack
    "langchain==0.3.26",
    "langchain-core==0.3.71",
    "langchain-openai==0.3.28",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.5.4",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.5.2",
    "langgraph-sdk==0.1.74",
    "langsmith==0.4.8",

    # OpenAI client
    "openai==1.97.1",
    "tiktoken==0.9.0",

    # Utilities
    "python-dotenv==1.1.1",

    # Graph visualization
    "pygraphviz==1.14",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-env",
    "pytest-freezegun",
    "setuptools",
]

deploy = [
    "build",
    "twine",
]
